update county string case & update notice style

--- a/imports/ui/pages/stations/stations.html
+++ b/imports/ui/pages/stations/stations.html
@@ -38,6 +38,9 @@
             {{/if}}
         </div>
     {{else}}
-        <p class="text-warning bg-warning text">Oops! No stations found!</p>
+        <p class="text-warning bg-warning">
+            Hold on ! We are fetching stations for you. <br />
+            If it takes too long then, Oops! We did not find any stations for you!
+        </p>
     {{/if}}
 </template>
