--- a/imports/ui/pages/station/station.html
+++ b/imports/ui/pages/station/station.html
@@ -10,6 +10,9 @@
             </address>
         {{/with}}
     {{else}}
-        <p class="text-warning bg-warning text">Oops! No station found!</p>
+        <p class="text-warning bg-warning">
+            Hold on ! We are fetching stations for you. <br />
+            If it takes too long then, Oops! We did not find any stations for you!
+        </p>
     {{/if}}
 </template>
