add trips page UI

--- a/imports/ui/pages/privacy/privacy.html
+++ b/imports/ui/pages/privacy/privacy.html
@@ -1,6 +1,6 @@
 <template name="App_privacy">
 
-    <h1>Privacy</h1>
+    <h1 class="page-header">Privacy</h1>
 
     <p>
         Quisque rutrum. Donec vitae sapien ut libero venenatis faucibus. Sed hendrerit. Nulla consequat massa quis enim. Ut a nisl id ante tempus hendrerit.
