--- a/imports/ui/pages/stations/stations.html
+++ b/imports/ui/pages/stations/stations.html
@@ -1,4 +1,5 @@
 <template name="App_stations">
+    <h1 class="page-header">BART Stations</h1>
     {{#if stations}}
         <div class="row">
             {{#if isMobile}}
