--- a/imports/ui/pages/terms/terms.html
+++ b/imports/ui/pages/terms/terms.html
@@ -1,6 +1,6 @@
 <template name="App_terms">
 
-    <h1>Terms of Use</h1>
+    <h1 class="page-header">Terms of Use</h1>
 
     <p>
         Quisque rutrum. Donec vitae sapien ut libero venenatis faucibus. Sed hendrerit. Nulla consequat massa quis enim. Ut a nisl id ante tempus hendrerit.
