add schedule trip api and real time estimate api

--- a/imports/ui/pages/trips/trips.html
+++ b/imports/ui/pages/trips/trips.html
@@ -31,8 +31,7 @@
             <label>&nbsp;</label>
         </div>
         <div class="form-group">
-            <a href="#" id="btn-trip-go" class="btn btn-primary">Go!</a>
-            <i class="bart-spinner hide fa fa-spinner fa-spin fa-fw"></i>
+            <button type="button" id="btn-trip-go" class="btn btn-primary form-control">Go!</button>
         </div>
     </form>
 </template>
