--- a/client/head.html
+++ b/client/head.html
@@ -6,4 +6,17 @@
   <!-- Raleway Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <title>BART Guide</title>
+
+  <!--
+  ===================================================================================================================================
+  =   Answer for The Same-Origin Policy - Part #5                                                                                   =
+  ===================================================================================================================================
+  =   My website is accessing the BART API on the server end.                                                                       =
+  =   The Same-Origin policy only applies when you access any API of third party domain using HTTP requests on the browser itself.  =
+  =   So my server script code provides the endpoints to access the BART API on the same domain,                                    =
+  =   and that’s why the client side JavaScript code from my website can access the API using HTTP requests from the browser,       =
+  =   because they are hosted on the same domain.                                                                                   =
+  ===================================================================================================================================
+  -->
+
 </head>
