--- a/imports/ui/pages/trips/trips.html
+++ b/imports/ui/pages/trips/trips.html
@@ -45,7 +45,7 @@
                 <div class="col-sm-10 col-sm-offset-1">
                     <div class="jumbotron real-time-jumbotron">
                         <h3 class="text-center">Real Time Train Estimates</h3>
-                        <div class="table-responsive lead">
+                        <div class="table-responsive lead text-center">
                             <table class="table">
                                 {{#each realTimeEstimates}}
                                     <tr>
@@ -60,7 +60,7 @@
                                             ({{{getRealTimeCountdown estimate.[0].minutes.[0]}}})
                                             {{initCountdown}}
                                         </td>
-                                        <td>({{estimate.[0].length}} cars)</td>
+                                        <td class="hidden-xs hidden-sm">({{estimate.[0].length}} cars)</td>
                                         <td>From Platform {{estimate.[0].platform}}</td>
                                     </tr>
                                 {{/each}}
