--- a/imports/ui/pages/station/station.html
+++ b/imports/ui/pages/station/station.html
@@ -34,8 +34,8 @@
                 <div class="col-sm-4">
                     <ul>
                         <li><strong>Platform Info: </strong> {{{platform_info}}}</li>
-                        <li><strong>North Platform: </strong> {{north_platforms}}</li>
-                        <li><strong>South Platform: </strong> {{south_platforms}}</li>
+                        <li><strong>North Platforms: </strong> {{north_platforms}}</li>
+                        <li><strong>South Platforms: </strong> {{south_platforms}}</li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
