--- a/imports/ui/pages/trips/trips.html
+++ b/imports/ui/pages/trips/trips.html
@@ -72,6 +72,9 @@
             <div class="col-sm-10 col-sm-offset-1">
                 {{#each trips}}
                     <div class="jumbotron">
+                        <div class="row text-center">
+                            <span><i class="fa fa-dollar"></i>{{$.fare}}</span>
+                        </div>
                         <div class="row">
                             {{{tripMarkup this}}}
                             <div class="col-sm-1 hidden-xs hidden-sm">
