--- a/imports/ui/pages/trips/trips.html
+++ b/imports/ui/pages/trips/trips.html
@@ -73,7 +73,7 @@
                 {{#each trips}}
                     <div class="jumbotron">
                         <div class="row text-center">
-                            <span><i class="fa fa-dollar"></i>{{$.fare}}</span>
+                            <span><i class="fa fa-dollar"></i>{{this.$.fare}}</span>
                         </div>
                         <div class="row">
                             {{{tripMarkup this}}}
